--- a/GSL_Admins.cfg
+++ b/GSL_Admins.cfg
@@ -55,4 +55,4 @@ Admin=76561198019070582:Staff //Robbie
 Admin=76561198010641412:Staff //Zen
 Admin=76561198067627327:Staff //MuncH
 Admin=76561198141776924:Staff //ArcticAvery
-
+Admin=76561198241561784:Staff //Cfols
