--- a/GSL_Admins.cfg
+++ b/GSL_Admins.cfg
@@ -56,3 +56,4 @@ Admin=76561198010641412:Staff //Zen
 Admin=76561198067627327:Staff //MuncH
 Admin=76561198141776924:Staff //ArcticAvery
 Admin=76561198241561784:Staff //Cfols
+Admin=76561197991724937:Staff //M.Husky
