--- a/GSL_Admins.cfg
+++ b/GSL_Admins.cfg
@@ -52,7 +52,7 @@ Admin=76561199214502152:Manager //Swooper
 Admin=76561198010641412:Manager //Zenegrad
 Admin=76561198118939528:Manager //Hexman
 Admin=76561197991724937:Manager //M.Husky
-
+Admin=76561198241561784:Manager //Cfols
 
 //GSL Refs
 Admin=76561198213414185:Staff //k1el.
