--- a/GSL_Admins.cfg
+++ b/GSL_Admins.cfg
@@ -67,6 +67,7 @@ Admin=76561198324244559:Staff //ACV
 Admin=76561198034841736:Staff //purayah
 Admin=76561197960329809:Staff //Pelk
 Admin=76561198893813559:Staff //Waffel
+Admin=76561198832959033:Staff //Emile
 
 
 //GSL Casters
@@ -88,3 +89,6 @@ Admin=76561198864230141:Staff //Mafty
 Admin=76561198981502468:Staff //Vic17
 Admin=76561198046137957:Staff //Winters Sin
 Admin=76561198010573701:Staff //Zeke
+Admin=76561198435385016:Staff //Mr.Bill Tiktok
+Admin=76561198082983308:Staff //Arkantdos
+Admin=76561198233679412:Staff //Bbedmas
