--- a/GSL_Admins.cfg
+++ b/GSL_Admins.cfg
@@ -89,6 +89,6 @@ Admin=76561198864230141:Staff //Mafty
 Admin=76561198981502468:Staff //Vic17
 Admin=76561198046137957:Staff //Winters Sin
 Admin=76561198010573701:Staff //Zeke
-Admin=76561198435385016:Staff //Mr.Bill Tiktok
 Admin=76561198082983308:Staff //Arkantdos
 Admin=76561198233679412:Staff //Bbedmas
+Admin=76561198435385016:Staff //Mr. Bill
