--- a/GSL_Admins.cfg
+++ b/GSL_Admins.cfg
@@ -92,3 +92,4 @@ Admin=76561198010573701:Staff //Zeke
 Admin=76561198082983308:Staff //Arkantdos
 Admin=76561198233679412:Staff //Bbedmas
 Admin=76561198435385016:Staff //Mr. Bill
+Admin=76561198061865894:Staff //J.Cleansman
