--- a/GSL_Admins.cfg
+++ b/GSL_Admins.cfg
@@ -94,3 +94,4 @@ Admin=76561198233679412:Staff //Bbedmas
 Admin=76561198435385016:Staff //Mr. Bill
 Admin=76561198061865894:Staff //J.Cleansman
 Admin=76561198426674413:Staff //KevinSui
+Admin=76561197984663913:Staff //Kabz
