--- a/GSL_Admins.cfg
+++ b/GSL_Admins.cfg
@@ -68,7 +68,7 @@ Admin=76561198034841736:Staff //purayah
 Admin=76561197960329809:Staff //Pelk
 Admin=76561198893813559:Staff //Waffel
 Admin=76561198832959033:Staff //Emile
-
+Admin=76561198129498806:Staff //Alexi Blade
 
 //GSL Casters
 Admin=76561198120907557:Staff //JGango
