--- a/GSL_Admins.cfg
+++ b/GSL_Admins.cfg
@@ -95,3 +95,4 @@ Admin=76561198435385016:Staff //Mr. Bill
 Admin=76561198061865894:Staff //J.Cleansman
 Admin=76561198426674413:Staff //KevinSui
 Admin=76561197984663913:Staff //Kabz
+Admin=76561198060848186:Staff //.Kuba
