--- a/GSL_Admins.cfg
+++ b/GSL_Admins.cfg
@@ -97,3 +97,4 @@ Admin=76561198426674413:Staff //KevinSui
 Admin=76561197984663913:Staff //Kabz
 Admin=76561198060848186:Staff //.Kuba
 Admin=76561198099194796:Staff // Satrox
+Admin=76561197996939780:Staff //Asla
