--- a/GSL_Admins.cfg
+++ b/GSL_Admins.cfg
@@ -98,3 +98,4 @@ Admin=76561197984663913:Staff //Kabz
 Admin=76561198060848186:Staff //.Kuba
 Admin=76561198099194796:Staff // Satrox
 Admin=76561197996939780:Staff //Asla
+Admin=76561198040033781:Staff //Walkman
